Fix for flex-grow on IE

--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -49,7 +49,7 @@
   .backgroundImage {
     opacity: 0.6;
     object-fit: cover;
-    font-family: 'object-fit: contain;';
+    font-family: 'object-fit: cover;';
     position: absolute;
     top: 0;
     left: 0;
