--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -36,6 +36,7 @@
       width: 100%;
       box-sizing: border-box;
       flex: 1 1;
+      flex-basis: auto;
 
       .subjObj {
         display: inline-block;
@@ -101,6 +102,7 @@
       width: 100%;
       box-sizing: border-box;
       flex: 1 1;
+      flex-basis: auto;
 
       .title {
         //font-weight: $weight-regular;
