--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -181,7 +181,7 @@ strong {
     left: 0;
     top: 0;
     object-fit: cover;
-    font-family: 'object-fit: contain;';
+    font-family: 'object-fit: cover;';
     opacity: 0.6;
     z-index: 2;
   }
