--- a/src/templates/templates.module.scss
+++ b/src/templates/templates.module.scss
@@ -69,10 +69,12 @@ $newsInfosWidth: 240px;
     .newsPost {
       @extend .flexRow;
       flex: 1;
+      flex-basis: auto;
       align-self: stretch;
 
       .newsInfosContainer {
         width: $newsInfosWidth;
+        max-width: $newsInfosWidth;
         @extend .flexColumn;
         @extend .flexSpaceBetween;
 
@@ -92,10 +94,14 @@ $newsInfosWidth: 240px;
           .category {
             position: absolute;
             top: 10px;
+            left: 0;
+            width: 100%;
+            text-align: center;
 
             a {
               @extend .flexRow;
               @extend .flexAlignCenter;
+              @extend .flexCenter;
             }
 
             .text {
@@ -117,7 +123,7 @@ $newsInfosWidth: 240px;
 
           img {
             object-fit: cover;
-            font-family: 'object-fit: contain;';
+            font-family: 'object-fit: cover;';
           }
         }
       }
@@ -141,6 +147,7 @@ $newsInfosWidth: 240px;
 
         .newsBody {
           flex: 1;
+          flex-basis: auto;
           padding: 5px 30px;
           box-sizing: border-box;
           font-weight: $weight-light;
@@ -201,7 +208,7 @@ $newsInfosWidth: 240px;
           width: 100%;
           height: 100%;
           object-fit: cover;
-          font-family: 'object-fit: contain;';
+          font-family: 'object-fit: cover;';
         }
       }
 
@@ -525,10 +532,12 @@ $newsInfosWidth: 240px;
         .newsInfosContainer {
           justify-content: space-between;
           width: 220px;
+          max-width: 220px;
         }
 
         .newsContent {
           flex: 1;
+          flex-basis: auto;
           width: auto;
           max-width: 600px;
         }
@@ -567,6 +576,7 @@ $newsInfosWidth: 240px;
 
         .newsInfosContainer {
           width: 100%;
+          max-width: 100%;
 
           .dateContainer {
             height: 25px;
